Add FastMCP Cloud compatible server version
- Create solidworks_mcp_server_fastmcp.py for FastMCP Cloud deployment
- Update requirements.txt with fastmcp dependency
- Update README with detailed deployment options:
  * Option 1: Standard MCP (no dependencies, recommended for local/Claude)
  * Option 2: Claude Desktop integration
  * Option 3: FastMCP Cloud deployment
- Document available tools for both server versions
- Add troubleshooting section for FastMCP Cloud builds

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,4 @@
-# SolidWorks API MCP Server
-# No external dependencies required - uses only Python standard library
-# Python 3.8+ is required
+# SolidWorks API MCP Server - FastMCP Cloud Edition
+# Required dependencies for FastMCP Cloud deployment
 
-# This file is provided for compatibility and documentation purposes.
-# The server uses only Python standard library modules:
-# - json
-# - os
-# - re
-# - sys
-# - collections
+fastmcp==2.12.3
