Remove documentation converter: delete scripts, references, and related tooling
- Delete solidworks-api-docs-converter/ directory (SKILL.md, scripts, references)
- Remove converter script commands from package.json (convert:solidworks-api, build:embeddings)
- Remove converter artifacts from .gitignore (skill file, pycache entries)
- Update README.md: remove Docs Converter Scripts section and converter paths from project structure
- Converter functionality no longer needed in this repository

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     "noEmit": true,
     "types": ["node", "vitest/globals"]
   },
-  "include": ["server/**/*.ts", "tests/**/*.ts", "solidworks-api-docs-converter/scripts/**/*.ts"]
+  "include": ["server/**/*.ts", "tests/**/*.ts"]
 }
